--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,10 @@
+<link rel="stylesheet" href="css/styles.css">
+
 <div class="topnav">
     <a class="active" href="#index">Home</a>
     <a href="#about">About</a>
     <a href="#research">Research</a>
     <a href="#demo">Demo</a>
   </div>
+
+  this is the dmeo
