--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="css/styles.css">
+
 <div class="topnav">
     <a class="active" href="#index">Home</a>
     <a href="#about">About</a>
