--- a/about.html
+++ b/about.html
@@ -1,8 +1,44 @@
-<link rel="stylesheet" href="css/styles.css">
-<div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="research.html">Research</a>
-    <a href="demo.html">Demo</a>
-  </div>
-  This is the about
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="research.html">Research</a>
+        <a href="demo.html">Demo</a>
+    </div>
+
+    <div class="container">
+        <h2>About Our Team</h2>
+
+        <section class="faculty">
+            <h3>Faculty</h3>
+            <article class="person">
+                <h4>Ian Chen</h4>
+                <p><i>Associate Professor and Faculty Advisor</i></p>
+                <ul>
+                    <li>Faculty bio goes here</li>
+                </ul>
+            </article>
+        </section>
+
+        <section class="students">
+            <h3>Students</h3>
+            <article class="person">
+                <h4>Student 1</h4>
+                <ul>
+                    <li>Student 1 details go here</li>
+                </ul>
+            </article>
+        </section>
+    </div>
+
+</body>
+</html>
