--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/pic12.png" alt="" />
 									</span>
 								</section>
 
