--- a/demo.html
+++ b/demo.html
@@ -29,7 +29,17 @@
 									</header>
 
 									<span class="image main"><img src="images/pic12.png" alt="" /></span>
+									<h3>Preformatted</h3>
+													<pre><code>i = 0;
 
+while (!deck.isInOrder()) {
+    print 'Iteration ' + i;
+    deck.shuffle();
+    i++;
+}
+
+print 'It took ' + i + ' iterations to sort the deck.';
+</code></pre>
 									<p>Rowdy the Riverhawk has gone through a lot of transformations throughout the year...</p>
 									<hr class="major" />
 
