--- a/demo.html
+++ b/demo.html
@@ -33,6 +33,26 @@
 								</header>
 
 							<!-- Content -->
+							<!-- Neural Network Visualization -->
+								<section>
+									<header class="main">
+										<h1>Neural Network Demo</h1>
+									</header>
+
+									<div id="network-visualization"></div> <!-- Placeholder for the animation -->
+
+									<button id="start-training">Start Training</button> <!-- Button to trigger real-time updates -->
+
+									<p>Watch the neural network learn in real-time!</p>
+								</section>
+
+								<!-- Load TensorFlow.js and D3.js -->
+								<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+								<script src="https://d3js.org/d3.v6.min.js"></script>
+
+								<!-- Custom Script -->
+								<script src="assets/js/nn-visualization.js"></script>
+
 								<section>
 									<header class="main">
 										<h1>Generic</h1>
