--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                   <li><a href="index.html">Homepage</a></li>
                   <li><a href="demo.html">demo</a></li>
                   <li><a href="elements.html">Elements</a></li>
+				  <li><a href="about.html">About</a></li>
                   
                 </ul>
               </nav>
