--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										</header>
 										<p>The overall goal of this project is to .... .... ... </p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="#demo.html" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
