--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Top Navigation -->
+		<nav id="menu">
+			<header class="major">
+				<h2>Menu</h2>
+			</header>
+			<ul>
+				<li><a href="index.html">Homepage</a></li>
+				<li><a href="demo.html">Demo</a></li>
+				<li><a href="about.html">About</a></li>
+			</ul>
+		</nav>
+
 		<!-- Wrapper -->
 			<div id="wrapper">
 
