--- a/about.html
+++ b/about.html
@@ -35,11 +35,26 @@
 		</style>
 	</head>
 	<body class="is-preload">
-
+		<!-- Header -->
+		<header id="header">
+			<!-- Menu -->
+			<nav id="menu">
+				<header class="major">
+					<h2>Menu</h2>
+				</header>
+				<ul>
+					<li><a href="index.html">Homepage</a></li>
+					<li><a href="demo.html">Demo</a></li>
+					<li><a href="about.html">About</a></li>
+				</ul>
+			</nav>
+		</header>
 		<!-- Wrapper -->
 		<div id="wrapper">
 			<!-- Main -->
 			<div id="main">
+				<!-- Add the title here -->
+				<h1>About Our Team</h1>
 				
 					
 					<!-- Team Members -->
