--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<!-- Menu -->
 			<nav id="menu">
 				<ul>
-					<li><a href="index.html" class="active">Homepage</a></li>
+					<li><a href="index.html">Homepage</a></li>
 					<li><a href="demo.html">Demo</a></li>
 					<li><a href="elements.html">Elements</a></li>
 					<li><a href="about.html">About</a></li>
