--- a/about.html
+++ b/about.html
@@ -38,10 +38,10 @@
 			<!-- Menu -->
 			<nav id="menu">
 				<ul>
-					<li><a href="index.html">HOMEPAGE</a></li>
-					<li><a href="demo.html">DEMO</a></li>
-					<li><a href="elements.html">ELEMENTS</a></li>
-					<li><a href="about.html" class="active">ABOUT</a></li>
+					<li><a href="index.html">Homepage</a></li>
+					<li><a href="demo.html">Demo</a></li>
+					<li><a href="elements.html">Elements</a></li>
+					<li><a href="about.html" class="active">About</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -51,6 +51,7 @@
 			<!-- Main -->
 			<div id="main">
 				<div class="inner">
+					<header class ="major">
 					<h1>About our Team</h1>
 					<!-- Team Members -->
 					<h2>Professor</h2>
