--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										<header>
 											<h1>Project Summary</h1>
 										</header>
-										<p>The overall goal of this project is to .... .... ... </p>
+										<p>While a large budget is allocated annually for towards quality control inspections, Artificial Intelligence (AI) can improve the efficiency of the quality control inspections. However, current AI-based systems are vulnerable to adversarial attacks. This project aims to develop an AI-based system that can detect anomalies in the production process and improve the reliability of real-time quality control inspections.</p>
 										<ul class="actions">
 											<li><a href="#demo.html" class="button big">Learn More</a></li>
 										</ul>
