--- a/demo.html
+++ b/demo.html
@@ -28,10 +28,10 @@
 			<!-- Menu -->
 			<nav id="menu">
 				<ul>
-					<li><a href="index.html">HOMEPAGE</a></li>
-					<li><a href="demo.html" class="active">DEMO</a></li>
-					<li><a href="elements.html">ELEMENTS</a></li>
-					<li><a href="about.html">ABOUT</a></li>
+					<li><a href="index.html">Homepage</a></li>
+					<li><a href="demo.html" class="active">Demo</a></li>
+					<li><a href="elements.html">Elements</a></li>
+					<li><a href="about.html">About</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -66,15 +66,6 @@
 								<label>Batch Size: <input type="number" id="batchSize" value="32"></label>
 							</div>
 			
-							<!-- Features -->
-							<div class="feature-controls">
-								<h3>Input Features</h3>
-								<label><input type="checkbox" name="feature" value="x"> X</label>
-								<label><input type="checkbox" name="feature" value="y"> Y</label>
-								<label><input type="checkbox" name="feature" value="x*y"> X*Y</label>
-								<label><input type="checkbox" name="feature" value="x²"> X²</label>
-								<label><input type="checkbox" name="feature" value="y²"> Y²</label>
-							</div>
 			
 							<button onclick="startTraining()">Start Training</button>
 						</div>
