--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 											<h1>Project Summary</h1>
 										</header>
 										<p>While a large budget is allocated annually for towards quality control inspections, Artificial Intelligence (AI) can improve the efficiency of the quality control inspections. However, current AI-based systems are vulnerable to adversarial attacks. This project aims to develop an AI-based system that can detect anomalies in the production process and improve the reliability of real-time quality control inspections.</p>
+										<p>The overall goal of this project is to .... .... ... </p>
 										<ul class="actions">
-											<li><a href="#demo.html" class="button big">Learn More</a></li>
+											<li><a href="demo.html" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -58,31 +59,31 @@
 									</header>
 									<div class="features">
 										<article>
-                      <span class="icon solid fa-signal"></span>
+                      				<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Input data</h3>
-												<p> Initailly we gather data from ... and do ... for .... </p>
+												<h3>Stage 1: Input data</h3>
+												<p> Gather data from a live webcam or pre-generated image dataset </p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Train model</h3>
-												<p>Then we use the data to train the model and ... for ... </p>
+												<h3>Stage 2: Train model</h3>
+												<p>Feed the data into a Neural Network model to classify between different objects.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3>Anomaly detection</h3>
-												<p>Then we use another model to detect adversarial attacks for ... and ... </p>
+												<h3>Stage 3: Adversarial Attack & Anomaly detection</h3>
+												<p>Implement adversarial attacks to test the robustness of the model and detect anomalies in the production process.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Panel deployment</h3>
-												<p>Lastly its now on panel for ... and ... </p>
+												<h3>Stage 4: Model Deployment</h3>
+												<p>Evaluate the performance of our model.</p>
 											</div>
 										</article>
 									</div>
