--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 											<h1>Project Summary</h1>
 										</header>
 										<p>While a large budget is allocated annually for towards quality control inspections, Artificial Intelligence (AI) can improve the efficiency of the quality control inspections. However, current AI-based systems are vulnerable to adversarial attacks. This project aims to develop an AI-based system that can detect anomalies in the production process and improve the reliability of real-time quality control inspections.</p>
-										<p>The overall goal of this project is to .... .... ... </p>
+										
 										<ul class="actions">
 											<li><a href="demo.html" class="button big">Learn More</a></li>
 										</ul>
@@ -75,7 +75,7 @@
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3>Stage 3: Adversarial Attack & Anomaly detection</h3>
+												<h3>Stage 3: Anomaly detection</h3>
 												<p>Implement adversarial attacks to test the robustness of the model and detect anomalies in the production process.</p>
 											</div>
 										</article>
