--- a/demo.html
+++ b/demo.html
@@ -32,6 +32,8 @@
 					<li><a href="demo.html" class="active">Demo</a></li>
 					<li><a href="elements.html">Elements</a></li>
 					<li><a href="about.html">About</a></li>
+					<li><a href="overview.html">Overview</a></li>
+
 				</ul>
 			</nav>
 		</header>
