--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>UML-SE Capstone Project </title>
+		<title>Cybersecurity on AI models </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,9 @@
 				<ul>
 					<li><a href="index.html" class="active">Homepage</a></li>
 					<li><a href="demo.html">Demo</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<!--<li><a href="elements.html">Elements</a></li> -->
 					<li><a href="about.html">About</a></li>
+					<li><a href="overview.html">Overview</a></li>
 				</ul>
 			</nav>
 		</header>
