--- a/about.html
+++ b/about.html
@@ -40,8 +40,10 @@
 				<ul>
 					<li><a href="index.html">Homepage</a></li>
 					<li><a href="demo.html">Demo</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<!--<li><a href="elements.html">Elements</a></li>-->
 					<li><a href="about.html" class="active">About</a></li>
+					<li><a href="overview.html">Overview</a></li>
+
 				</ul>
 			</nav>
 		</header>
