--- a/about.html
+++ b/about.html
@@ -49,12 +49,14 @@
 		</header>
 
 		<!-- Wrapper -->
-		<div id="wrapper">
-			<!-- Main -->
-			<div id="main">
-				<div class="inner">
-					<header class ="major">
-					<h1>About our Team</h1>
+		<section>
+			<header class="main">
+				<h1>Elements</h1>
+			</header>
+			<h1>About our Team</h1>
+		
+				
+					
 					<!-- Team Members -->
 					<h2>Professor</h2>
 					<div class="team-member">
@@ -86,12 +88,9 @@
 					<!-- Footer -->
 					<footer>
 						<h2>Acknowledgements</h2>
-						<p>Thank you Schneider and UML!</p>
+						<p>Thank you Schneider Electric and UML for supporting this project </p>
 					</footer>
-				</div>
-			</div>
-		</div>
-
+				</section>
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/browser.min.js"></script>
