--- a/demo.html
+++ b/demo.html
@@ -48,6 +48,9 @@
 
 					<!-- Content -->
 					<section>
+						<header class="main">
+							<h1>Neural Network Simulation</h1>
+						</header>
 					<div class="container">
 						<div class="controls">
 							<h2>Controls</h2>
