--- a/demo.html
+++ b/demo.html
@@ -6,10 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Neural Network Demo</title>
+		<title>Demo</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/chat.css">
+
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.18.0/dist/tf.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0"></script>
         <style>
@@ -48,12 +50,32 @@
 
 					<!-- Content -->
 					<section>
+
+
+						<header class="main">
+							<h1>Chat with a Language Model</h1>
+						</header>
+						<p>A large language model (LLM) is a type of AI model that is trained on massive datasets of text to then generate vocabulary, grammar, and context. A well-known example is ChatGPT, but we have tailored our LLM from Facebook's OLlama. We currently host our LLM on a Raspberry Pi device as the API endpoint. </p>
+						</head>
+						<body>
+							<div id="chatbox"></div>
+							<div id="inputBox">
+								<input type="text" id="messageInput" placeholder="Type your message..." />
+								<button id="sendButton">Send</button>
+							  </div>
+						</body>
+						<hr class="major" />
+
+
+
 						<header class="main">
 							<h1>Neural Network Simulation</h1>
 						</header>
 						<p>A neural network that consists of layers of "neurons" that process information. In classification, a neural network takes input data, processes it through layers, then decides which category it belongs to. For instance, if you give it a picture of a keyboard or a mouse, it learns patterns from past images and predicts whether the new image is a keyboard or mouse. </p>
 						<p>In machine learning, an epoch means going through the entire dataset once to recognize patterns. Batch sizes break up the number of samples processed at once. The learning rate of a model influences how quickly and effectively the model learns. A high learning rate can lead to faster learning, but may become unstable while a low learning rate can lead to slow training. Lastly, the loss result describes a measure of how inaccurate the model is - the goal is to reduce the loss so the model makes fewer mistakes. </p>
 						<hr class="major" />
+
+
 					<div class="container">
 						<div class="controls">
 							<h2>Controls</h2>
@@ -97,6 +119,8 @@
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
 		<script src="assets/js/demo.js"></script>
+		<script src="assets/js/chat.js"></script>
+
 
 	</body>
 </html>
