--- a/demo.html
+++ b/demo.html
@@ -57,13 +57,14 @@
 						</header>
 						<p>A large language model (LLM) is a type of AI model that is trained on massive datasets of text to then generate vocabulary, grammar, and context. A well-known example is ChatGPT, but we have tailored our LLM from Facebook's OLlama. We currently host our LLM on a Raspberry Pi device as the API endpoint. </p>
 						</head>
-						<body>
+						<div class="chat-container">
 							<div id="chatbox"></div>
 							<div id="inputBox">
 								<input type="text" id="messageInput" placeholder="Type your message..." />
 								<button id="sendButton">Send</button>
-							  </div>
-						</body>
+							</div>
+						</div>
+						
 						<hr class="major" />
 
 
