--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,8 @@
 					<li><a href="index.html">Homepage</a></li>
 					<li><a href="demo.html" class="active">Demo</a></li>
 					<!--<li><a href="elements.html">Elements</a></li>-->
-					<li><a href="about.html">About</a></li>
+										<!--<li><a href="about.html">About</a></li>-->
+
 					<li><a href="overview.html">Overview</a></li>
 
 				</ul>
