--- a/overview.html
+++ b/overview.html
@@ -20,7 +20,8 @@
 				<ul>
 					<li><a href="index.html" >Homepage</a></li>
 					<li><a href="demo.html">Demo</a></li>
-					<li><a href="about.html">About</a></li>
+										<!--<li><a href="about.html">About</a></li>-->
+
 					<li><a href="overview.html"class="active">Overview</a></li>
 				</ul>
 			</nav>
